--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="flex justify-center gap-[100px] bg-gray-200 py-[15px] items-center">
+        <nav class="lg:flex justify-center gap-[100px] bg-gray-200 py-[15px] items-center">
             <p class="text-[12px]">Choose another country or region to see content specific to your location.</p>
             <div class="flex gap-[20px]">
                 <div class="flex bg-white px-[20px] rounded-[10px]">
@@ -21,58 +21,62 @@
             </div>
         </nav>
         <section class="bg-gray-50">
-            <ul class="flex justify-center gap-[50px] py-[10px] bg-white">
-                <li><i class="fa-brands fa-apple fa-lg" style="color: #01060e;"></i></li>
-                <li>Store</li>
-                <li>Mac</li>
-                <li>iPad</li>
-                <li>iPhone</li>
-                <li>Watch</li>
-                <li>Vision</li>
-                <li>AirPods</li>
-                <li>TV & Home</li>
-                <li>Entertaiment</li>
-                <li>Accessories</li>
-                <li>Support</li>
-                <li><i class="fa-solid fa-magnifying-glass" style="color: #020203;"></i></li>
-                <li><i class="fa-solid fa-bag-shopping" style="color: #0d121c;"></i></li>
-            </ul>
-            <div class="flex justify-center py-[20px]"><img src="./Снимок экрана 2025-03-01 035757.png" alt=""></div>
+            <div class="hidden lg:block">
+                <ul class="flex justify-center gap-[50px] py-[10px] bg-white">
+                    <li><i class="fa-brands fa-apple fa-lg" style="color: #01060e;"></i></li>
+                    <li>Store</li>
+                    <li>Mac</li>
+                    <li>iPad</li>
+                    <li>iPhone</li>
+                    <li>Watch</li>
+                    <li>Vision</li>
+                    <li>AirPods</li>
+                    <li>TV & Home</li>
+                    <li>Entertaiment</li>
+                    <li>Accessories</li>
+                    <li>Support</li>
+                    <li><i class="fa-solid fa-magnifying-glass" style="color: #020203;"></i></li>
+                    <li><i class="fa-solid fa-bag-shopping" style="color: #0d121c;"></i></li>
+                </ul>
+            </div>
+            <div class="hidden lg:block">
+                <div class="flex justify-center py-[20px]"><img src="./Снимок экрана 2025-03-01 035757.png" alt=""></div>
+            </div>
         </section>
-        <div class="bg-gray-200 py-[5px] text-center flex justify-center gap-[30px] items-center">
+        <div class="bg-gray-200 py-[5px] text-center lg:flex justify-center gap-[30px] items-center">
             <p>Get $170–$630 in credit toward iPhone 16 or iPhone 16 Pro when you trade in iPhone 12 or higher.</p>
             <a class="text-blue-500" href="https://www.apple.com/shop/buy-iphone">Shop iPhone <i class="fa-solid fa-chevron-right fa-2xs"></i></a>
         </div>
-        <div class="w-[85%] m-auto flex justify-between py-[70px] items-center">
+        <div class="w-[85%] m-auto lg:flex justify-between py-[70px] items-center">
             <h1 class="text-[80px] font-semibold">iPhone</h1>
             <h1 class="text-[30px] font-semibold">Designed to be loved.</h1>
         </div>
     </header>
         <video autoplay muted loop src="./xlarge_2x.mp4"></video>
-        <h1 class="py-[50px] text-[50px] font-bold pl-[100px]">Get to know iPhone.</h1>
-    <section class="py-[50px] w-[85%] m-auto flex justify-center gap-[50px]">
-        <aside class="transition-transform duration-500 transform  hover:scale-[1.02] delay-100" data-aos="fade-up"
+        <h1 class="py-[50px] text-[30px] lg:text-[50px] font-bold lg:pl-[100px] pl-[20px]">Get to know iPhone.</h1>
+    <section class="py-[50px] w-[85%] m-auto lg:flex justify-center gap-[50px]">
+        <aside class="transition-transform duration-500 transform pb-[20px]  hover:scale-[1.02] delay-100" data-aos="fade-up"
         data-aos-duration="1000">
             <img class="w-[400px] h-[750px] rounded-[40px]" src="./apple_intelligence__gbh77cvflkia_xlarge_2x.jpg" alt="">
         </aside>
-        <aside class="transition-transform duration-500 transform  hover:scale-[1.02] delay-150" data-aos="fade-up"
+        <aside class="transition-transform duration-500 transform pb-[20px]  hover:scale-[1.02] delay-150" data-aos="fade-up"
         data-aos-duration="1000">
             <img class="w-[400px] h-[750px] rounded-[40px]" src="./camera__exi2qfijti0y_xlarge_2x.jpg" alt="">
         </aside>
-        <aside class="transition-transform duration-500 transform  hover:scale-[1.02] delay-200" data-aos="fade-up"
+        <aside class="transition-transform duration-500 transform pb-[20px]  hover:scale-[1.02] delay-200" data-aos="fade-up"
         data-aos-duration="1000">
             <img class="w-[400px] h-[750px] rounded-[40px]" src="./battery__2v7w6kmztvm2_xlarge_2x.jpg" alt="">
         </aside>
     </section>
     <div class="bg-gray-200">
         <section class="w-[85%] m-auto">
-            <div class="flex justify-between items-center" data-aos="fade-up"
+            <div class="lg:flex justify-between items-center" data-aos="fade-up"
             data-aos-duration="1000">
                 <h1 class="py-[50px] text-[50px] font-bold">Explore the lineup.</h1>
                 <a class="text-blue-500" href="https://www.apple.com/iphone/compare/">Compare all models <i class="fa-solid fa-chevron-right fa-2xs"></i></a>
             </div>
         </section>
-        <section class="flex justify-center gap-[100px] py-[50px]">
+        <section class="lg:flex justify-center gap-[100px] py-[50px]">
             <aside class="text-center delay-100" data-aos="fade-up"
             data-aos-duration="1000">
                 <img class="w-[320px] h-[450px] pb-[50px] transition-transform duration-500 transform hover:scale-[1.03]" src="./iphone_16pro__erw9alves2qa_xlarge_2x.png" alt="">
@@ -121,7 +125,7 @@
             <img class="transition-transform duration-500 transform hover:scale-[1.02]" src="./Снимок экрана 2025-03-02 232930.png" alt="">
         </section>
         <section class="w-[85%] m-auto py-[50px]">
-            <div class="flex justify-between items-center" data-aos="fade-up"
+            <div class="lg:flex justify-between items-center" data-aos="fade-up"
             data-aos-duration="1000">
                 <h1 class="py-[50px] text-[50px] font-bold">Why Apple is the best <br>place to buy iPhone.</h1>
                 <a class="text-blue-500" href="https://www.apple.com/iphone/compare/">Shop iPhone <i class="fa-solid fa-chevron-right fa-2xs"></i></a>
@@ -129,7 +133,7 @@
 
         </section>
         <div class="w-[70%] m-auto py-[20px]"><h1><i class="fa-brands fa-apple"></i>  <i class="fa-solid fa-chevron-right" style="color: #01060e;"></i> IPhone</h1></div>
-        <footer class="w-[70%] m-auto flex justify-between text-[14px] py-[50px] border-b-[1px] border-gray-400">
+        <footer class="lg:w-[70%] w-[90%] m-auto flex justify-between text-[14px] py-[50px] border-b-[1px] border-gray-400">
             <div>
                 <ul class="space-y-3">
                     <li class="font-semibold">Shop and Learn</li>
